--- a/index.html
+++ b/index.html
@@ -4,15 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ramadan Countdown</title>
-
-    <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-    
     <style>
-        /* Global Styles */
         body {
             font-family: 'Poppins', sans-serif;
-            background: linear-gradient(45deg, #6a11cb, #2575fc); /* Smooth Gradient */
+            background: linear-gradient(45deg, #6a11cb, #2575fc); 
             color: white;
             text-align: center;
             margin: 0;
@@ -33,7 +29,7 @@
             font-size: 4.5em;
             font-weight: bold;
             margin-top: 40px;
-            color: #ffcc00; /* Golden color */
+            color: #ffcc00; 
             text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
             animation: countdownAnimation 1s ease-in-out infinite;
         }
@@ -102,7 +98,7 @@
 
         /* Dark/Light Theme */
         body.dark-theme {
-            background: linear-gradient(45deg, #333, #555); /* Darker gradient */
+            background: linear-gradient(45deg, #333, #555); 
         }
 
         .theme-toggle {
@@ -198,25 +194,17 @@
     </style>
 </head>
 <body>
-    <!-- Background Music Player -->
-    <audio id="bgMusic" autoplay loop>
-        <source src="your-audio-file-url.mp3" type="audio/mp3">
-        Your browser does not support the audio element.
-    </audio>
+    <!-- Language Selector -->
+    <select id="language-select" onchange="changeLanguage()">
+        <option value="en">English</option>
+        <option value="ar">Arabic</option>
+        <option value="bn">Bengali</option>
+    </select>
 
-    <!-- Theme Toggle Button -->
-    <button class="theme-toggle" onclick="toggleTheme()">Toggle Dark/Light</button>
+    <!-- Islamic Date Display -->
+    <div id="islamic-date"></div>
 
-    <!-- Modal -->
-    <div class="modal" id="quoteModal">
-        <div class="modal-content">
-            <h2>Ramadan Mubarak!</h2>
-            <p>"The month of Ramadan is a month of blessings, forgiveness, and mercy."</p>
-            <button class="modal-button" onclick="closeModal()">Close</button>
-        </div>
-    </div>
-
-    <!-- Main Content -->
+    <!-- Countdown Section -->
     <div class="container">
         <div class="salam">Assalamualaikum and welcome!</div>
         <h1>Countdown to Ramadan</h1>
@@ -228,33 +216,63 @@
         <p>Powered by <a href="#">NAYEEM</a></p>
         <!-- Footer Social Media Icons -->
         <div class="footer-icons">
-            <a href="#" title="Facebook" target="_blank"></a>
-            <a href="#" title="Twitter" target="_blank"></a>
-            <a href="#" title="Instagram" target="_blank"></a>
+            <a href="#" title="Facebook" target="_blank">🌐</a>
+            <a href="#" title="Twitter" target="_blank">🐦</a>
+            <a href="#" title="Instagram" target="_blank">📸</a>
         </div>
     </div>
 
     <!-- Scroll to Top Button -->
-    <button class="scroll-to-top" id="scrollToTopBtn" onclick="scrollToTop()"></button>
+    <button class="scroll-to-top" id="scrollToTopBtn" onclick="scrollToTop()">↑</button>
 
     <script>
-        // Set the date of Ramadan to March 30, 2025
+        const translations = {
+            en: {
+                greeting: "Assalamualaikum and welcome!",
+                countdownTitle: "Countdown to Ramadan",
+                countdownMessage: "Happy Ramadan to you and your loved ones!"
+            },
+            ar: {
+                greeting: "السلام عليكم ومرحبا!",
+                countdownTitle: "العد التنازلي لشهر رمضان",
+                countdownMessage: "رمضان مبارك لكم ولأحبائكم!"
+            },
+            bn: {
+                greeting: "আসসালামু আলাইকুম এবং স্বাগতম!",
+                countdownTitle: "রমজান কাউন্টডাউন",
+                countdownMessage: "আপনাদের এবং আপনার প্রিয়জনদের রমজান মোবারক!"
+            }
+        };
+
+        function changeLanguage() {
+            const selectedLanguage = document.getElementById('language-select').value;
+            document.querySelector('.salam').innerHTML = translations[selectedLanguage].greeting;
+            document.querySelector('h1').innerHTML = translations[selectedLanguage].countdownTitle;
+            document.getElementById('message').innerHTML = translations[selectedLanguage].countdownMessage;
+        }
+
+        async function fetchIslamicDate() {
+            const response = await fetch('https://api.aladhan.com/v1/gToH?date=' + new Date().toISOString().split('T')[0]);
+            const data = await response.json();
+            const islamicDate = data.data.hijri.date + " " + data.data.hijri.month.en + " " + data.data.hijri.year;
+            document.getElementById('islamic-date').innerHTML = "Islamic Date: " + islamicDate;
+        }
+
+        fetchIslamicDate(); 
+
         const ramadanDate = new Date('March 30, 2025 00:00:00').getTime();
 
         const countdown = setInterval(function() {
             const now = new Date().getTime();
             const distance = ramadanDate - now;
 
-            // Calculate days, hours, minutes, and seconds
             const days = Math.floor(distance / (1000 * 60 * 60 * 24));
             const hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
             const minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
             const seconds = Math.floor((distance % (1000 * 60)) / 1000);
 
-            // Display the countdown
             document.getElementById("countdown").innerHTML = days + "d " + hours + "h " + minutes + "m " + seconds + "s ";
 
-            // If the countdown is over, display a message
             if (distance < 0) {
                 clearInterval(countdown);
                 document.getElementById("countdown").innerHTML = "Ramadan Mubarak!";
@@ -262,23 +280,6 @@
             }
         }, 1000);
 
-        // Toggle Dark/Light Theme
-        function toggleTheme() {
-            document.body.classList.toggle('dark-theme');
-        }
-
-        // Modal Display
-        window.onload = function() {
-            setTimeout(function() {
-                document.getElementById("quoteModal").style.display = 'block';
-            }, 2000); // Show the modal after 2 seconds
-        };
-
-        function closeModal() {
-            document.getElementById("quoteModal").style.display = 'none';
-        }
-
-        // Scroll to Top Button Visibility
         window.onscroll = function() {
             const scrollToTopBtn = document.getElementById("scrollToTopBtn");
             if (document.body.scrollTop > 50 || document.documentElement.scrollTop > 50) {
@@ -288,11 +289,10 @@
             }
         };
 
-        // Scroll to Top Function
         function scrollToTop() {
-            document.body.scrollTop = 0; 
-            document.documentElement.scrollTop = 0; 
+            document.body.scrollTop = 0;
+            document.documentElement.scrollTop = 0;
         }
     </script>
 </body>
-</html>
+        </html>
