--- a/index.html
+++ b/index.html
@@ -46,6 +46,18 @@
             margin-top: 20px;
         }
 
+        .tip {
+            font-size: 1.5em;
+            color: #ffcc00;
+            margin-top: 30px;
+            font-weight: 600;
+            padding: 15px;
+            background-color: rgba(0, 0, 0, 0.5);
+            border-radius: 8px;
+            max-width: 800px;
+            margin: 0 auto;
+        }
+
         .container {
             max-width: 800px;
             margin: 0 auto;
@@ -183,6 +195,10 @@
                 font-size: 1.8em;
             }
 
+            .tip {
+                font-size: 1.2em;
+            }
+
             .salam {
                 font-size: 1.5em;
             }
@@ -210,6 +226,11 @@
         <h1>Countdown to Ramadan</h1>
         <div id="countdown"></div>
         <div class="message" id="message"></div>
+    </div>
+
+    <!-- Tips Section -->
+    <div class="tip" id="ramadan-tip">
+        Tip of the Day: <br> "Ramadan is a time of reflection, patience, and self-restraint. Make the most of it by increasing your prayers and good deeds!"
     </div>
 
     <div class="footer">
@@ -295,4 +316,4 @@
         }
     </script>
 </body>
-        </html>
+    </html>
